# libfacedetection.net

./: .gitignore  README.md  Samples.sln  azure-pipelines-1.yml  azure-pipelines.yml  function-azure-pipelines.yml  libfacedetection.net.sln
.github/workflows/: package.yml
docs/: index.md  script.js
samples/AzureFunction/: AzureFunction.csproj  DetectFunction.cs
samples/ConsoleApp/: ConsoleApp.csproj  Program.cs
src/: CMakeLists.txt  CMakeSettings.json
src/libfacedetection.net/: Class1.cs  CnnFaceDetected.cs  CnnFaceDetector.cs  Interop.cs  libfacedetection.net.csproj
src/native/: CMakeLists.txt  facedetectcnn-model.cpp  facedetectcnn.cpp  facedetectcnn.h  facedetection_export.h  wrapper.cpp  wrapper.h
test/libfacedetection.net.Test/: CnnFaceDetectorTest.cs  UnitTest.cs  libfacedetection.net.Test.csproj
test/libfacedetection.net.Test/Properties/: launchSettings.json
